@startuml ER_Diagram
!theme plain
skinparam entity {
    BackgroundColor #E1F5FE
    BorderColor #0277BD
}
skinparam relationship {
    BackgroundColor #FFF9C4
    BorderColor #F57F17
}

entity "users" as users {
  **id** : INT <<PK>>
  --
  name : VARCHAR(255)
  email : VARCHAR(255) <<UNIQUE>>
  password_hash : VARCHAR(255)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "transactions" as transactions {
  **id** : INT <<PK>>
  --
  **user_id** : INT <<FK>>
  date : DATE
  description : VARCHAR(255)
  merchant : VARCHAR(255)
  amount : DECIMAL(10,2)
  transaction_type : ENUM(income, expense)
  **category_id** : INT <<FK>>
  source : VARCHAR(100)
  payment_method : VARCHAR(100)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "categories" as categories {
  **id** : INT <<PK>>
  --
  name : VARCHAR(100) <<UNIQUE>>
  type : ENUM(income, expense, both)
  description : TEXT
  icon : VARCHAR(100)
  created_at : TIMESTAMP
}

entity "budgets" as budgets {
  **id** : INT <<PK>>
  --
  **user_id** : INT <<FK>>
  **category_id** : INT <<FK>>
  monthly_limit : DECIMAL(10,2)
  month : INT
  year : INT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "savings_goals" as savings_goals {
  **id** : INT <<PK>>
  --
  **user_id** : INT <<FK>>
  goal_name : VARCHAR(255)
  target_amount : DECIMAL(10,2)
  current_amount : DECIMAL(10,2)
  monthly_contribution : DECIMAL(10,2)
  target_date : DATE
  status : ENUM(active, completed, abandoned)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "ai_insights" as ai_insights {
  **id** : INT <<PK>>
  --
  **user_id** : INT <<FK>>
  insight_text : TEXT
  insight_type : VARCHAR(100)
  month : INT
  year : INT
  tags : JSON
  created_at : TIMESTAMP
}

entity "forecast_results" as forecast_results {
  **id** : INT <<PK>>
  --
  **user_id** : INT <<FK>>
  month : INT
  year : INT
  predicted_total_expense : DECIMAL(10,2)
  predicted_food : DECIMAL(10,2)
  predicted_transport : DECIMAL(10,2)
  predicted_shopping : DECIMAL(10,2)
  predicted_bills : DECIMAL(10,2)
  predicted_entertainment : DECIMAL(10,2)
  confidence_score : FLOAT
  model_used : VARCHAR(100)
  created_at : TIMESTAMP
}

entity "financial_scores" as financial_scores {
  **id** : INT <<PK>>
  --
  **user_id** : INT <<FK>>
  score : INT
  savings_rate_score : FLOAT
  budget_control_score : FLOAT
  spending_stability_score : FLOAT
  debt_score : FLOAT
  emergency_fund_score : FLOAT
  status : VARCHAR(50)
  month : INT
  year : INT
  created_at : TIMESTAMP
}

entity "chat_history" as chat_history {
  **id** : INT <<PK>>
  --
  **user_id** : INT <<FK>>
  session_id : VARCHAR(100)
  user_message : TEXT
  ai_response : TEXT
  intent_type : VARCHAR(100)
  confidence : FLOAT
  created_at : TIMESTAMP
}

entity "uploaded_files" as uploaded_files {
  **id** : INT <<PK>>
  --
  **user_id** : INT <<FK>>
  file_name : VARCHAR(255)
  file_path : VARCHAR(500)
  file_type : ENUM(csv, excel, pdf)
  transaction_count : INT
  upload_date : TIMESTAMP
  status : ENUM(processing, completed, failed)
  error_message : TEXT
}

entity "user_learning" as user_learning {
  **id** : INT <<PK>>
  --
  **user_id** : INT <<FK>>
  merchant : VARCHAR(255)
  **category_id** : INT <<FK>>
  frequency : INT
  confidence : FLOAT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "recurring_transactions" as recurring_transactions {
  **id** : INT <<PK>>
  --
  **user_id** : INT <<FK>>
  **category_id** : INT <<FK>>
  description : VARCHAR(255)
  merchant : VARCHAR(255)
  amount : DECIMAL(10,2)
  frequency : ENUM(daily, weekly, monthly, yearly)
  next_due_date : DATE
  is_active : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

users ||--o{ transactions : "has many"
users ||--o{ budgets : "has many"
users ||--o{ savings_goals : "has many"
users ||--o{ ai_insights : "generates"
users ||--o{ financial_scores : "has many"
users ||--o{ chat_history : "has many"
users ||--o{ uploaded_files : "uploads"
users ||--o{ user_learning : "learns from"
users ||--o{ recurring_transactions : "tracks"

categories ||--o{ transactions : "categorizes"
categories ||--o{ budgets : "has"
categories ||--o{ user_learning : "learns"
categories ||--o{ recurring_transactions : "has"

transactions }o--|| users : "belongs to"
transactions }o--|| categories : "categorized as"

budgets }o--|| users : "belongs to"
budgets }o--|| categories : "limits"

savings_goals }o--|| users : "created by"

ai_insights }o--|| users : "for"

forecast_results }o--|| users : "predicts for"

financial_scores }o--|| users : "calculates"

chat_history }o--|| users : "belongs to"

uploaded_files }o--|| users : "uploaded by"

user_learning }o--|| users : "learns"
user_learning }o--|| categories : "learns"

recurring_transactions }o--|| users : "belongs to"
recurring_transactions }o--|| categories : "categorized as"

@enduml
